--- a/pom.xml
+++ b/pom.xml
@@ -58,9 +58,10 @@
   </issueManagement>
 
   <scm>
-    <connection>scm:svn:https://svn.apache.org/repos/asf/httpcomponents/httpcore/branches/4.4.x</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/httpcomponents/httpcore/branches/4.4.x</developerConnection>
-    <url>https://svn.apache.org/repos/asf/httpcomponents/httpcore/branches/4.4.x</url>
+    <connection>scm:git:https://git-wip-us.apache.org/repos/asf/httpcomponents-core.git</connection>
+    <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/httpcomponents-core.git</developerConnection>
+    <url>https://github.com/apache/httpcomponents-core/tree/${project.scm.tag}</url>
+    <tag>4.4.x</tag>
   </scm>
 
   <modules>
