Document how to switch to version 9 of the forthcoming parent POM.

--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,16 @@
    <http://www.apache.org />.
  --><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
-    <artifactId>project</artifactId>
+    <!-- Parent 8 -->
     <groupId>org.apache.httpcomponents</groupId>
+    <artifactId>project</artifactId>
     <version>8</version>
     <relativePath>../project/pom.xml</relativePath>
+    <!-- Parent 9 (forthcoming) -->
+<!--     <groupId>org.apache.httpcomponents</groupId> -->
+<!--     <artifactId>httpcomponents-parent</artifactId> -->
+<!--     <version>9</version> -->
+<!--     <relativePath>../httpcomponents-parent/pom.xml</relativePath> -->
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>httpcomponents-core</artifactId>
