Silence doclint warning about missing @param and @throws

--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,7 @@
           </execution>
         </executions>
         <configuration>
+          <additionalparam>-Xdoclint:-missing</additionalparam>
           <!-- reduce console output. Can override with -Dquiet=false -->
           <quiet>true</quiet>
           <source>${maven.compiler.source}</source>
