--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,7 @@
     <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
     <junit.version>4.12</junit.version>
     <mockito.version>2.7.22</mockito.version>
+    <slf4j.version>1.7.25</slf4j.version>
     <log4j.version>2.8.2</log4j.version>
   </properties>
 
@@ -97,15 +98,19 @@
         <scope>test</scope>
       </dependency>
       <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-api</artifactId>
+        <artifactId>log4j-slf4j-impl</artifactId>
         <version>${log4j.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-core</artifactId>
         <version>${log4j.version}</version>
-        <scope>test</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
