--- a/httpcore/pom.xml
+++ b/httpcore/pom.xml
@@ -93,6 +93,13 @@
                   </goals>
               </execution>
           </executions>
+        <configuration>
+          <archive>
+            <manifestEntries combine.children="append">
+              <Automatic-Module-Name>org.apache.httpcomponents.httpcore</Automatic-Module-Name>
+            </manifestEntries>
+          </archive>
+        </configuration>
       </plugin>
     </plugins>
     <resources>
