Corrected Automatic-Module-Name entries for HttpCore NIO and HttpCore AB

--- a/httpcore-ab/pom.xml
+++ b/httpcore-ab/pom.xml
@@ -73,7 +73,7 @@
             <configuration>
               <archive combine.children="append">
                 <manifestEntries>
-                  <Automatic-Module-Name>org.apache.httpcomponents.httpcore-ab</Automatic-Module-Name>
+                  <Automatic-Module-Name>org.apache.httpcomponents.httpcore.ab</Automatic-Module-Name>
                 </manifestEntries>
               </archive>
             </configuration>
