--- a/httpcore-nio/pom.xml
+++ b/httpcore-nio/pom.xml
@@ -106,7 +106,7 @@
             <configuration>
               <archive combine.children="append">
                 <manifestEntries>
-                  <Automatic-Module-Name>org.apache.httpcomponents.httpcore-nio</Automatic-Module-Name>
+                  <Automatic-Module-Name>org.apache.httpcomponents.httpcore.nio</Automatic-Module-Name>
                 </manifestEntries>
               </archive>
             </configuration>
