Added 'oraclejdk10' to Travis build matrix; upgraded Maven Surefire plugin to version 2.21.0; upgraded Mockito to version 2.19.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ jdk:
   - openjdk7
   - oraclejdk8
   - oraclejdk9
+  - oraclejdk10
 
 after_success:
   - mvn clean cobertura:cobertura coveralls:report
