--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
     <maven.compiler.target>1.7</maven.compiler.target>
     <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
     <junit.version>4.12</junit.version>
-    <mockito.version>2.7.22</mockito.version>
+    <mockito.version>2.19.0</mockito.version>
     <slf4j.version>1.7.25</slf4j.version>
     <log4j.version>2.8.2</log4j.version>
   </properties>
@@ -322,6 +322,12 @@
             <exclude>**/.dockerignore</exclude>
           </excludes>
         </configuration>
+      </plugin>
+      <!-- remove after upgrade of HC Parent -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.21.0</version>
       </plugin>
     </plugins>
   </build>
