HTTPCLIENT-1942: Add support for Reactive Streams
This commit adds initial support for the Reactive Streams specification
[1]. The main part of this change is a pair of non-public classes, the
ReactiveDataProducer and ReactiveDataConsumer, which are reactive
adapters for Apache's AsyncDataProducer and AsyncDataConsumer
interfaces. Two public classes are built on top of these types:

* ReactiveEntityProducer: An AsyncEntityProducer implementation backed
  by ReactiveDataProducer that allows a Publisher<ByteBuffer> to be
  streamed as a request body
* ReactiveResponseConsumer: An AsyncResponseConsumer that exposes a
  special callback that provides a view of the streaming HTTP response
  as a Message<HttpResponse, Publisher<ByteBuffer>>, allowing the body
  to be consumed by a Subscriber<ByteBuffer>

[1] http://www.reactive-streams.org/

--- a/httpcore5-testing/pom.xml
+++ b/httpcore5-testing/pom.xml
@@ -50,6 +50,12 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>org.apache.httpcomponents.core5</groupId>
+      <artifactId>httpcore5-reactive</artifactId>
+      <version>${project.version}</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <scope>compile</scope>
@@ -71,6 +77,12 @@
       <artifactId>log4j-core</artifactId>
       <scope>compile</scope>
       <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>io.reactivex.rxjava2</groupId>
+      <artifactId>rxjava</artifactId>
+      <version>2.1.9</version>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
