Upgraded nginx image to version 1.15; fixed push configuration

--- a/httpcore5-testing/docker/nginx/default.conf
+++ b/httpcore5-testing/docker/nginx/default.conf
@@ -22,11 +22,10 @@ server {
         index  index.html;
 
         location = /index.html {
-            add_header Link "</css/site.css>;rel=preload";
-            add_header Link "</css/maven-theme.css>;rel=preload";
-            add_header Link "</css/maven-base.css>;rel=preload";
-            add_header Link "</css/hc-maven.css>;rel=preload";
-            add_header Link "</images/logos/httpcomponents.png>;rel=preload";
+            http2_push      "/css/site.css";
+            http2_push      "/css/maven-theme.css";
+            http2_push      "/css/hc-maven.css";
+            http2_push      "/images/logos/httpcomponents.png";
         }
     }
 
