--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
   <name>Apache HttpComponents Core Parent</name>
   <version>5.0-beta4-SNAPSHOT</version>
   <description>Apache HttpComponents Core is a library of components for building HTTP enabled services</description>
-  <url>http://hc.apache.org/httpcomponents-core</url>
+  <url>http://hc.apache.org/httpcomponents-core-5.0.x/</url>
   <inceptionYear>2005</inceptionYear>
   <packaging>pom</packaging>
 
