add [openjdk11] to Travis build matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ jdk:
   - oraclejdk8
   - oraclejdk9
   - oraclejdk10
+  - openjdk11
 
 after_success:
   - mvn clean cobertura:cobertura coveralls:report
