--- a/pom.xml
+++ b/pom.xml
@@ -267,11 +267,11 @@
           </excludes>
         </configuration>
       </plugin>
-      <!-- remove after upgrade of HC Parent -->
+      <!-- Remove after upgrade of HC Parent -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.0</version>
+        <version>2.22.1</version>
       </plugin>
     </plugins>
   </build>
