--- a/httpcore5-osgi/pom.xml
+++ b/httpcore5-osgi/pom.xml
@@ -28,7 +28,7 @@
   <parent>
     <groupId>org.apache.httpcomponents.core5</groupId>
     <artifactId>httpcore5-parent</artifactId>
-    <version>5.0-beta5</version>
+    <version>5.0-beta6-SNAPSHOT</version>
   </parent>
   <artifactId>httpcore5-osgi</artifactId>
   <name>Apache HttpComponents Core OSGi Bundle</name>
