The reason phrase returned by org.apache.hc.core5.http.HttpResponse.getReasonPhrase() may be empty.
I'm not sure how it happened, but I've seen this case within a debugger.
Also add the 'bin' folder to RAT excludes.

--- a/pom.xml
+++ b/pom.xml
@@ -263,6 +263,8 @@
             <exclude>src/docbkx/resources/**</exclude>
             <exclude>src/test/resources/*.truststore</exclude>
             <exclude>**/.dockerignore</exclude>
+            <!-- Eclipse can leave some file in 'bin' when an imported project misconfigured. -->
+            <exclude>bin/**</exclude>
           </excludes>
         </configuration>
       </plugin>
