--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
     <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
+    <conscrypt.version>1.4.1</conscrypt.version>
     <junit.version>4.12</junit.version>
     <mockito.version>2.23.0</mockito.version>
     <slf4j.version>1.7.25</slf4j.version>
@@ -85,6 +86,11 @@
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>org.conscrypt</groupId>
+        <artifactId>conscrypt-openjdk-uber</artifactId>
+        <version>${conscrypt.version}</version>
+      </dependency>
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
