--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ sudo: false
 jdk:
   - openjdk7
   - oraclejdk8
+  - openjdk10
 
 after_success:
   - mvn clean cobertura:cobertura coveralls:report
