Added openjdk11 to Travis-CI build matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ jdk:
   - openjdk7
   - oraclejdk8
   - openjdk10
+  - openjdk11
 
 after_success:
   - mvn clean cobertura:cobertura coveralls:report
