--- a/httpcore5-reactive/pom.xml
+++ b/httpcore5-reactive/pom.xml
@@ -57,7 +57,7 @@
     <dependency>
       <groupId>io.reactivex.rxjava2</groupId>
       <artifactId>rxjava</artifactId>
-      <version>2.1.9</version>
+      <version>${rxjava.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
