--- a/httpcore5-testing/pom.xml
+++ b/httpcore5-testing/pom.xml
@@ -79,7 +79,7 @@
     <dependency>
       <groupId>io.reactivex.rxjava2</groupId>
       <artifactId>rxjava</artifactId>
-      <version>2.1.9</version>
+      <version>${rxjava.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
