Use PKCS12 keystores instead of deprecated JKS for TLS and integration tests

--- a/pom.xml
+++ b/pom.xml
@@ -314,6 +314,7 @@
             <exclude>**/.checkstyle</exclude>
             <exclude>src/docbkx/resources/**</exclude>
             <exclude>src/test/resources/*.truststore</exclude>
+            <exclude>src/test/resources/*.p12</exclude>
           </excludes>
         </configuration>
       </plugin>
