--- a/httpcore5-testing/pom.xml
+++ b/httpcore5-testing/pom.xml
@@ -28,17 +28,13 @@
   <parent>
     <groupId>org.apache.httpcomponents.core5</groupId>
     <artifactId>httpcore5-parent</artifactId>
-    <version>5.0.2-SNAPSHOT</version>
+    <version>5.1-alpha1-SNAPSHOT</version>
   </parent>
   <artifactId>httpcore5-testing</artifactId>
   <name>Apache HttpComponents Core Integration Tests</name>
   <description>Apache HttpComponents HTTP/2 and HTTP/1.1 core component integration tests</description>
   <url>http://hc.apache.org/httpcomponents-core-ga</url>
   <packaging>jar</packaging>
-
-  <properties>
-    <Automatic-Module-Name>org.apache.httpcomponents.core5.httpcore5.testing</Automatic-Module-Name>
-  </properties>
 
   <dependencies>
     <dependency>
