--- a/httpcore5-reactive/pom.xml
+++ b/httpcore5-reactive/pom.xml
@@ -37,6 +37,10 @@
   <url>http://hc.apache.org/httpcomponents-core-ga</url>
   <packaging>jar</packaging>
 
+  <properties>
+    <Automatic-Module-Name>org.apache.httpcomponents.core5.httpcore5.reactive</Automatic-Module-Name>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.apache.httpcomponents.core5</groupId>
@@ -85,7 +89,7 @@
           </execution>
         </executions>
       </plugin>
-	</plugins>
+    </plugins>
   </build>
 
   <reporting>
