--- a/httpcore5/pom.xml
+++ b/httpcore5/pom.xml
@@ -37,6 +37,10 @@
   <url>http://hc.apache.org/httpcomponents-core-ga</url>
   <packaging>jar</packaging>
 
+  <properties>
+    <Automatic-Module-Name>org.apache.httpcomponents.core5.httpcore5</Automatic-Module-Name>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
