--- a/httpcore5-reactive/pom.xml
+++ b/httpcore5-reactive/pom.xml
@@ -34,7 +34,7 @@
   <artifactId>httpcore5-reactive</artifactId>
   <name>Apache HttpComponents Core Reactive Extensions</name>
   <description>Apache HttpComponents Reactive Streams Bindings</description>
-  <url>http://hc.apache.org/httpcomponents-core-ga</url>
+  <url>https://hc.apache.org/httpcomponents-core-5.0.x/</url>
   <packaging>jar</packaging>
 
   <properties>
