--- a/httpcore5-testing/pom.xml
+++ b/httpcore5-testing/pom.xml
@@ -112,7 +112,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-failsafe-plugin</artifactId>
-            <version>2.22.2</version>
+            <version>${hc.surefire.version}</version>
             <executions>
               <execution>
                 <goals>
