--- a/pom.xml
+++ b/pom.xml
@@ -125,11 +125,9 @@
       <plugin>
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
-          <!-- reduce console output. Can override with -Dquiet=false -->
-          <quiet>true</quiet>
-          <source>${maven.compiler.source}</source>
           <links>
-            <link>http://docs.oracle.com/javase/7/docs/api/</link>
+            <link>${project.url}/httpcore5/apidocs/</link>
+            <link>${project.url}/httpcore5-h2/apidocs/</link>
           </links>
         </configuration>
       </plugin>
@@ -250,7 +248,24 @@
           </reportSet>
         </reportSets>
       </plugin>
-
+      <plugin>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>${hc.javadoc.version}</version>
+        <configuration>
+          <quiet>true</quiet>
+          <links>
+            <link>${project.url}/httpcore5/apidocs/</link>
+            <link>${project.url}/httpcore5-h2/apidocs/</link>
+          </links>
+        </configuration>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <report>javadoc</report>
+            </reports>
+          </reportSet>
+        </reportSets>
+      </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>clirr-maven-plugin</artifactId>
