--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
    individuals on behalf of the Apache Software Foundation.  For more
    information on the Apache Software Foundation, please see
    <http://www.apache.org />.
- --><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+ --><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <groupId>org.apache.httpcomponents</groupId>
     <artifactId>httpcomponents-parent</artifactId>
@@ -221,11 +221,31 @@
             <link>${project.url}/httpcore5/apidocs/</link>
             <link>${project.url}/httpcore5-h2/apidocs/</link>
           </links>
+          <notimestamp>true</notimestamp>
+          <groups>
+            <group>
+              <title>Apache HttpCore HTTP/1.1</title>
+              <packages>org.apache.hc.core5*</packages>
+            </group>
+            <group>
+              <title>Apache HttpCore HTTP/2</title>
+              <packages>org.apache.hc.core5.http2*</packages>
+            </group>
+            <group>
+              <title>Apache HttpCore Reactive Streams Bindings</title>
+              <packages>org.apache.hc.core5.reactive*</packages>
+            </group>
+            <group>
+              <title>Apache HttpCore Testing</title>
+              <packages>org.apache.hc.core5.testing*:org.apache.hc.core5.benchmark*</packages>
+            </group>
+          </groups>
         </configuration>
         <reportSets>
           <reportSet>
             <reports>
               <report>javadoc</report>
+              <report>aggregate</report>
             </reports>
           </reportSet>
         </reportSets>
